--- a/BabySpa/Views/Shared/_Layout.cshtml
+++ b/BabySpa/Views/Shared/_Layout.cshtml
@@ -25,25 +25,19 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <style type="text/css" id="#jarallax-clip-0">
-        #jarallax-container-0 {
-            clip: rect(0 1423px 720px 0);
-            clip: rect(0, 1423px, 720px, 0);
-        }
-    </style>
 
     
 </head>
 @{ string type = "";
     string path = Request.Url.GetLeftPart(UriPartial.Authority);
 }
-<body class="light-blue-skin intro-page spa-lp">
+<body class="cyan-skin intro-page spa-lp">
     <!--Navigation & Intro-->
     <header>
         <!--Navbar-->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar top-nav-collapse" style="">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="">
             <div class="container">
-                <a class="navbar-brand waves-effect waves-light" href="@path#"><strong>Navbar</strong></a>
+                <a class="navbar-brand waves-effect waves-light" href="#"><strong>Navbar</strong></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -51,22 +45,22 @@
                     <!--Links-->
                     <ul class="navbar-nav mr-auto smooth-scroll">
                         <li class="nav-item">
-                            <a class="nav-link waves-effect waves-light" href="@path#home">Home</a>
+                            <a class="nav-link waves-effect waves-light" href="#home">Нүүр</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect waves-light" href="@path#about" data-offset="100">About</a>
+                            <a class="nav-link waves-effect waves-light" href="#about" data-offset="100">Тухай</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect waves-light" href="@path#services" data-offset="100">Services</a>
+                            <a class="nav-link waves-effect waves-light" href="#services" data-offset="100">Үйлчилгээ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect waves-light" href="@path#attractions" data-offset="100">Attractions</a>
+                            <a class="nav-link waves-effect waves-light" href="#attractions" data-offset="100">Бүтээгдэхүүн</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect waves-light" href="@path#testimonials" data-offset="100">Opinions</a>
+                            <a class="nav-link waves-effect waves-light" href="#testimonials" data-offset="100">Opinions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect waves-light" href="@path#newsletter" data-offset="100">Newsletter</a>
+                            <a class="nav-link waves-effect waves-light" href="#newsletter" data-offset="100">Newsletter</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link waves-effect waves-light" data-toggle="modal" data-target="#modal-contact">Contact</a>
@@ -89,22 +83,22 @@
         </nav>
         <!--/Navbar-->
         <!-- Intro Section -->
-        <div id="home" class="view hm-black-strong-1 jarallax" data-jarallax="{&quot;speed&quot;: 0.2}" style="background-image: none; z-index: 0; background-attachment: scroll; background-size: auto;" data-jarallax-original-styles="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Relax/full%20page/spa.jpg);">
+        <div id="home" class="view hm-black-strong-1 jarallax" data-jarallax='{"speed": 0.2}' 
+             style="background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/Relax/full%20page/spa.jpg');">
             <div class="full-bg-img">
                 <div class="container flex-center">
                     <div class="row smooth-scroll">
                         <div class="col-md-12 white-text text-center">
                             <div class="wow fadeInDown" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInDown;">
-                                <h3 class="display-3 font-bold mb-2">Baby Spa</h3>
+                                <h3 class="display-3 font-bold mb-2">Baby Spa Mongolia</h3>
                                 <hr class="hr-light">
-                                <h4 class="subtext-header mt-4 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <p> Deleniti consequuntur, nihil voluptatem modi nobis veniam.</p></h4>
+                                <h4 class="subtext-header mt-4 mb-5">-Бяцхан үрсийн алжаал тайлах төв-<p> Тавтай үйлчлүүлээрэй.</p></h4>
                             </div>
-                            <a class="btn btn-rounded btn-lg btn-purple-2 wow fadeInUp waves-effect waves-light" data-wow-delay="0.2s" data-toggle="modal" data-target="#modal-reservation" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">Make a reservation</a>
+                            <a class="btn btn-rounded btn-lg btn-secondary btn-purple-2 wow fadeInUp waves-effect waves-light" data-wow-delay="0.2s" data-toggle="modal" data-target="#modal-reservation" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">Захиалга өгөх</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="jarallax-container-0" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -100;"><div style="background-position: 50% 50%; background-size: 100%; background-repeat: no-repeat; background-image: url(&quot;https://mdbootstrap.com/img/Photos/Horizontal/Relax/full%20page/spa.jpg&quot;); position: fixed; top: 0px; left: 0px; width: 1423px; height: 800.438px; overflow: hidden; pointer-events: none; margin-left: 0px; margin-top: -40.2188px; visibility: visible; transform: translateY(-28.4px) translateZ(0px);"></div></div>
         </div>
         <!--Modal Reservation-->
         <div class="modal fade modal-ext" id="modal-reservation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;" aria-hidden="true">
@@ -116,39 +110,39 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">×</span>
                         </button>
-                        <h4 class="modal-title w-100">Reservation Form</h4>
+                        <h4 class="modal-title w-100">Захиалгын хуудас</h4>
                     </div>
                     <!--Body-->
                     <div class="modal-body">
                         <div class="md-form">
                             <input type="text" id="form22" class="form-control">
-                            <label for="form42">Your Full Name</label>
+                            <label for="form42">Таны овог нэр</label>
                         </div>
                         <div class="md-form">
                             <input type="text" id="form32" class="form-control">
-                            <label for="form34">Your Email</label>
+                            <label for="form34">Имэйл хаяг</label>
                         </div>
                         <div class="md-form">
                             <input type="text" id="form32" class="form-control">
-                            <label for="form34">Your Phone Number</label>
+                            <label for="form34">Утасны дугаар</label>
                         </div>
                         <!--Basic textarea-->
                         <div class="md-form">
                             <textarea type="text" id="form7" class="md-textarea"></textarea>
-                            <label for="form7">Basic textarea</label>
+                            <label for="form7">Цаг</label>
                         </div>
                         <div class="text-center">
-                            <button class="btn btn-lg btn-purple-2 waves-effect">Send Information</button>
-                            <p class="text-muted">*Some dummy text goes here.</p>
+                            <button class="btn btn-lg btn-purple-2 btn-primary waves-effect">Илгээх</button>
+                            <p class="text-muted">Захиалгыг хүлээж аваад бид эргэж холбогдон баталгаажуулах болно.</p>
 
                             <div class="call">
-                                <p>Or you prefer book a table by phone? <span class="cf-phone"><i class="fa fa-phone"></i>+01 234 565 280</span></p>
+                                <p>Эсвэл утсаар захиалга өгөх үү? <span class="cf-phone"><i class="fa fa-phone"></i>76002288</span></p>
                             </div>
                         </div>
                     </div>
                     <!--Footer-->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-info waves-effect waves-light" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-info waves-effect waves-light" data-dismiss="modal">Хаах</button>
                     </div>
                 </div>
                 <!--/Content-->
@@ -165,42 +159,42 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">×</span>
                         </button>
-                        <h4 class="modal-title w-100" id="myModalLabel">Write to us</h4>
+                        <h4 class="modal-title w-100" id="myModalLabel">Холбоо барих</h4>
                     </div>
                     <!--Body-->
                     <div class="modal-body">
-                        <p>We like to receive a messages.</p>
+                        <p>Бид таны санал хүсэлийг авахдаа үргэлж баяртай байх болно</p>
                         <br>
                         <div class="md-form">
                             <i class="fa fa-user prefix"></i>
                             <input type="text" id="form22" class="form-control">
-                            <label for="form42">Your name</label>
+                            <label for="form42">Таны нэр</label>
                         </div>
                         <div class="md-form">
                             <i class="fa fa-envelope prefix"></i>
                             <input type="text" id="form32" class="form-control">
-                            <label for="form34">Your email</label>
+                            <label for="form34">Имэйл хаяг</label>
                         </div>
                         <div class="md-form">
                             <i class="fa fa-tag prefix"></i>
                             <input type="text" id="form32" class="form-control">
-                            <label for="form34">Subject</label>
+                            <label for="form34">Гарчиг</label>
                         </div>
                         <div class="md-form">
                             <i class="fa fa-pencil prefix"></i>
                             <textarea type="text" id="form8" class="md-textarea"></textarea>
-                            <label for="form8">Icon Prefix</label>
+                            <label for="form8">Таны санал</label>
                         </div>
                         <div class="text-center">
-                            <button class="btn btn-lg btn-primary waves-effect">Submit</button>
+                            <button class="btn btn-lg btn-primary waves-effect">Илгээх</button>
                             <div class="call">
-                                <p>Or would you prefer to call? <span class="cf-phone"><i class="fa fa-phone"></i>+01 234 565 280</span></p>
+                                <p>Эсвэл утсаар холбогдох уу? <span class="cf-phone"><i class="fa fa-phone"></i>76002288</span></p>
                             </div>
                         </div>
                     </div>
                     <!--Footer-->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Хаах</button>
                     </div>
                 </div>
                 <!--/Content-->
@@ -211,27 +205,99 @@
     <!--/Navigation & Intro-->
     <!--Main content-->
     <main>
-
-        <div class="container body-content">
-            @RenderBody()
-            <hr />
-
-        </div>
+        @RenderBody()
     </main>
     <!--/Main content-->
     <!--Footer-->
     <footer class="page-footer center-on-small-only pt-4">
 
         <!--Footer Links-->
+        <div class="container mb-3">
+
+            <!--First row-->
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-xl-4 col-lg-4 mt-1 mb-1 wow fadeIn" data-wow-delay="0.3s">
+                    <!--About-->
+                    <h5 class="title mb-4 font-bold">ABOUT MATERIAL DESIGN</h5>
+
+                    <p>Material Design (codenamed Quantum Paper) is a design language developed by Google.</p>
+
+                    <p>Material Design for Bootstrap (MDB) is a powerful Material Design UI KIT for most popular HTML, CSS, and JS framework - Bootstrap.</p>
+                    <!--/About -->
+
+                    <div class="footer-socials mt-2">
+
+                        <!--Facebook-->
+                        <a type="button" class="btn-floating  btn-pink-2"><i class="fa fa-facebook"></i></a>
+                        <!--Dribbble-->
+                        <a type="button" class="btn-floating  btn-pink-2"><i class="fa fa-dribbble"></i></a>
+                        <!--Twitter-->
+                        <a type="button" class="btn-floating  btn-pink-2"><i class="fa fa-twitter"></i></a>
+                        <!--Google +-->
+                        <a type="button" class="btn-floating  btn-pink-2"><i class="fa fa-google-plus"></i></a>
+
+                    </div>
+                </div>
+                <!--/First column-->
+
+                <hr class="w-100 clearfix d-md-none">
+
+                <!--Second column-->
+                <div class="col-xl-3 ml-xl-auto col-lg-4 col-md-6 mt-1 mb-1 wow fadeIn" data-wow-delay="0.3s">
+                    <!--Search-->
+                    <h5 class="title mb-4 font-bold">Search something</h5>
+
+                    <ul class="footer-search">
+                        <li>
+                            <form class="search-form" role="search">
+                                <div class="form-group waves-light waves-effect waves-light">
+                                    <input type="text" class="form-control" placeholder="Search">
+                                </div>
+                            </form>
+                        </li>
+                    </ul>
+
+                    <!--Info-->
+                    <p><i class="fa fa-home pr-1"></i> New York, NY 10012, US</p>
+                    <p><i class="fa fa-envelope pr-1"></i> info@example.com</p>
+                    <p><i class="fa fa-phone pr-1"></i> + 01 234 567 88</p>
+                    <p><i class="fa fa-print pr-1"></i> + 01 234 567 89</p>
+
+                </div>
+                <!--/Second column-->
+
+                <hr class="w-100 clearfix d-md-none">
+
+                <!--Third column-->
+                <div class="col-xl-3 ml-xl-auto col-lg-4 col-md-6 mt-1 mb-1 wow fadeIn" data-wow-delay="0.3s">
+                    <!--Contact-->
+                    <h5 class="title mb-4 font-bold">Recent news</h5>
+
+                    <ul class="footer-posts">
+                        <li><a>Ut enim ad minim veniam nostrud.</a><span><p class="pink-text-2">28 july 2016</p></span></li>
+                        <li><a>Duis aute dolor in reprehenderit.</a><span><p class="pink-text-2">27 july 2016</p></span></li>
+                        <li><a>Excepteur sint occaecat cupidatat.</a><span><p class="pink-text-2">26 july 2016</p></span></li>
+                        <li><a>Sed perspiciatis unde omnis iste.</a><span><p class="pink-text-2">25 july 2016</p></span></li>
+                    </ul>
+
+                </div>
+                <!--/Third column-->
+
+            </div>
+            <!--/First row-->
+
+        </div>
         <!--/Footer Links-->
         <!--Copyright-->
         <div class="footer-copyright wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
             <div class="container-fluid">
-                © 2016 Copyright: <a href="https://www.mdbootstrap.com/" rel="nofollow"> MDBootstrap.com </a>
+                © 2018 Copyright: <a href="http://babyspamongolia.mn/" rel="nofollow"> BabySpaMongolia.mn </a>
             </div>
         </div>
         <!--/Copyright-->
-        
+
 
 
     </footer><div class="hiddendiv common"></div>
