--- a/BabySpa/Views/Home/Index.cshtml
+++ b/BabySpa/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="container">
 
     <!--Section: About-->
-    <section id="about" class="section about mt-4 mb-3">
+    <section id="about" class="section about mt-4 mb-3 section-scaled">
 
         <!--Secion heading-->
         <h1 class="section-heading my-5 py-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">About our Spa</h1>
@@ -21,7 +21,7 @@
             <div class="col-lg-5 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
 
                 <!--Image-->
-                <img src="~/Content/image/img (7).jpg" class="img-fluid z-depth-1" alt="My photo">
+                <img src="~/Content/image/img (7).jpg" class="img-fluid z-depth-3" alt="My photo">
             </div>
             <!--/First column-->
             <!--Second column-->
@@ -232,7 +232,7 @@
             <!--/First column-->
             <!--Second column-->
             <div class="col-md-4 mb-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <i class="fa fa-heart-o pink-text-2"></i>
+                <i class="fa fa-users pink-text-2"></i>
                 <h4 class="feature-title grey-text-2">Мэргэжилийн баг</h4>
                 <p class="grey-text-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
             </div>
@@ -261,30 +261,34 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-r">
                     <!--Card-->
-                    <div class="pricing-card naked-card">
-                        <!--Content-->
-                        <div class="card-body">
-                            <h4>Дархлаа дэмжих</h4>
-                            <!--Price-->
-                            <div class="price">
-                                <h6>40'000</h6>
+                    <div class="card">
+                        <div class="py-3 px-3">
+                            <div class="pricing-card naked-card">
+                                <!--Content-->
+                                <div class="card-body">
+                                    <h4>Дархлаа дэмжих</h4>
+                                    <!--Price-->
+                                    <div class="price">
+                                        <h6>40'000</h6>
+                                    </div>
+                                    <!--/.Price-->
+                                    <ul class="striped">
+                                        <li>
+                                            <p><strong>Усанд</strong> оруулан угаах</p>
+                                        </li>
+                                        <li>
+                                            <p>Ажлаал тайлах усан <strong>фитнес</strong></p>
+                                        </li>
+                                        <li>
+                                            <p> Бүтэн биеийн <strong>массаж</strong></p>
+                                        </li>
+                                        <li>
+                                            <p><strong>Ээжид</strong> зориулсан урамшуулал</p>
+                                        </li>
+                                    </ul>
+                                    <a class="btn btn-info btn-lg btn-rounded waves-effect waves-light">Захиалах</a>
+                                </div>
                             </div>
-                            <!--/.Price-->
-                            <ul class="striped">
-                                <li>
-                                    <p><strong>Усанд</strong> оруулан угаах</p>
-                                </li>
-                                <li>
-                                    <p>Ажлаал тайлах усан <strong>фитнес</strong></p>
-                                </li>
-                                <li>
-                                    <p> Бүтэн биеийн <strong>массаж</strong></p>
-                                </li>
-                                <li>
-                                    <p><strong>Ээжид</strong> зориулсан урамшуулал</p>
-                                </li>
-                            </ul>
-                            <a class="btn btn-info btn-lg waves-effect waves-light">Захиалах</a>
                         </div>
                     </div>
                     <!--Card-->
@@ -318,7 +322,7 @@
                                         <p><strong>Ээжид</strong> зориулсан урамшуулал</p>
                                     </li>
                                 </ul>
-                                <a class="btn btn-lg btn-outline-white waves-effect waves-light">Захиалах</a>
+                                <a class="btn btn-lg btn-outline-white btn-rounded waves-effect waves-light">Захиалах</a>
                             </div>
                         </div>
                     </div>
@@ -328,7 +332,7 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-r">
                     <!--Card-->
-                    <div class="pricing-card naked-card">
+                    <div class="naked-card pricing-card">
                         <!--Content-->
                         <div class="card-body">
                             <h4>Алжаал тайлах</h4>
@@ -351,7 +355,7 @@
                                     <p><strong>Ээжид</strong> зориулсан урамшуулал</p>
                                 </li>
                             </ul>
-                            <a class="btn btn-info btn-lg waves-effect waves-light"> Захиалах</a>
+                            <a class="btn btn-info btn-lg btn-rounded waves-effect waves-light"> Захиалах</a>
                         </div>
                     </div>
                     <!--Card-->
