--- a/BabySpa/Views/Home/Index.cshtml
+++ b/BabySpa/Views/Home/Index.cshtml
@@ -266,7 +266,7 @@
                             <div class="pricing-card naked-card">
                                 <!--Content-->
                                 <div class="card-body">
-                                    <h4>Дархлаа дэмжих</h4>
+                                    <h4>ЖАРААХАЙ</h4>
                                     <!--Price-->
                                     <div class="price">
                                         <h6>40'000</h6>
@@ -302,7 +302,7 @@
                         <div class="text-white text-center pricing-card d-flex align-items-center rgba-black-strong py-3 px-3">
                             <!--Content-->
                             <div class="card-body">
-                                <h4>Чийрэгжүүлэх</h4>
+                                <h4>БОРОЛДОЙ</h4>
                                 <!--Price-->
                                 <div class="price pt-0">
                                     <h6 class="px-0 mx-0">40'000</h6>
@@ -335,7 +335,7 @@
                     <div class="naked-card pricing-card">
                         <!--Content-->
                         <div class="card-body">
-                            <h4>Алжаал тайлах</h4>
+                            <h4>ЦҮНДЭЭЛЭЙ</h4>
                             <!--Price-->
                             <div class="price">
                                 <h6>40'000</h6>
