--- a/BabySpa/Content/Site.css
+++ b/BabySpa/Content/Site.css
@@ -1,7 +1,34 @@
-﻿body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+﻿@font-face {
+	font-family: MnDown;
+	src: url('../font/MnDown.ttf') format('truetype');
+}
+@font-face {
+    font-family: MonTaurus;
+    src: url('../font/MonTaurus.ttf') format('truetype');
+}
+@font-face {
+    font-family: MonAstronCTT;
+    src: url('../font/MonAstronCTT.ttf') format('truetype');
+}
+
+body {
+    font-family: "MonTaurus","Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333333;
     background-color: white;
+}
+#home_desc {
+    font-family: MnDown;
+    color: #6fc7bf;
+}
+
+section h1 {
+    font-family: MonAstronCTT;
+    color: #33b5e5;
+    font-size: 3rem;
+}
+
+button.close span{
+    font-family:"Roboto";
 }
 /*body {
     padding-top: 50px;
@@ -21,6 +48,17 @@ select,
 textarea {
     max-width: 280px;
 }*/
+.logo img {
+    width: 100px;
+    height: 100px;
+}
+
+.navbar-brand {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: -5px;
+    margin-bottom: -45px;
+}
 .navbar:not(.top-nav-collapse) {
     background: 0 0;
     background-color: transparent !important;
@@ -41,6 +79,17 @@ textarea {
         position:fixed !important;
             top:0;*/
     }
+}
+@media (min-width: 600px) {
+    .navbar.scrolling-navbar.top-nav-collapse div .navbar-brand {
+        box-shadow: 0 14px 20px -12px rgba(0,0,0,0.5);
+        border-radius:10em;
+    }
+}
+.md-pills .nav-link {
+    color: #d82364;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+    background-color: #1ee6ac8f;
 }
 @media (max-width: 740px) {
     .full-height, .full-height body, .full-height header, .full-height header .view {
@@ -97,10 +146,13 @@ textarea {
     }
 }
 .hm-black-strong-1 .full-bg-img, .hm-black-strong-1 .mask {
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0,0,0,.5);
 }
 .background-grey {
     background-color: #eee;
+}
+.background-nomin {
+    background-color: #00ADC3;
 }
 .pink-text-2 {
     color: #ff82ad !important;
@@ -112,4 +164,11 @@ textarea {
     /*margin: -110px 30px 0 !important;*/
     border-radius: 10px 10px 0px 0px;
     z-index:3;
+}
+.section-description {
+    color: #333333;
+}
+.tab-icon {
+    max-width: 36px;
+    max-height: 36px;
 }
