--- a/BabySpa/Views/Home/Index.cshtml
+++ b/BabySpa/Views/Home/Index.cshtml
@@ -7,21 +7,23 @@
 }
 
 <!--First container-->
-<div class="container">
+<div class="container-fluid pt-4"  style="background-image: url('img/bg-pattern-4.JPG');background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;">
 
     <!--Section: About-->
-    <section id="about" class="section about mt-4 mb-3 section-scaled">
+    <section id="about" class="section about ml-lg-5 mr-lg-5 pl-lg-5 pr-lg-5">
 
         <!--Secion heading-->
-        <h1 class="section-heading my-5 py-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">About our Spa</h1>
+        <h1 class="section-heading my-0 py-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Бидний тухай</h1>
 
         <!--First row-->
         <div class="row">
             <!--First column-->
-            <div class="col-lg-5 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
+            <div class="col-lg-5 col-md-12 mb-5 mt-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
 
                 <!--Image-->
-                <img src="~/Content/image/img (7).jpg" class="img-fluid z-depth-3" alt="My photo">
+                <img src="~/img/img_0422.jpg" class="img-fluid z-depth-3" alt="My photo">
             </div>
             <!--/First column-->
             <!--Second column-->
@@ -39,16 +41,19 @@
     </section>
     <!--/Section: About-->
 
-    <hr class="between-sections">
 
     <!--Projects section v.3-->
-    <section id="services" class="section mt-4 mb-4">
+    <!--/Projects section v.3-->
+</div>
+<div class="container-fluid " style="background-image: url('img/bg-pattern-1.JPG')">
+    <section id="services" class="section pt-4">
         <!--Section heading-->
-        <h1 class="section-heading mt-5 pt-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Бидний үйлчилгээ</h1>
+        <h1 class="section-heading mt-0 pt-4 mb-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Бидний үйлчилгээ</h1>
         <!--Section description-->
-        <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-        Нярай болон бага насны хүүхдийн дархлаа дэмжих, алжаал тайлах, чийрэгжүүлэх цогц үйлчилгээг энхрий бяцхан дүү нартаа санал болгож байна.
-        Манай хамт олон хүүхдийн асаргаа, сувилалын чиглэлээр мэргэшсэн эмж, сувилагч нараас бүрдсэн бөгөөд найрсаг, мэргэжлийн үйлчилгээг үзүүлнэ.</p>
+        <p class="section-description wow fadeIn mb-4" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
+            Нярай болон бага насны хүүхдийн дархлаа дэмжих, алжаал тайлах, чийрэгжүүлэх цогц үйлчилгээг энхрий бяцхан дүү нартаа санал болгож байна.
+            Манай хамт олон хүүхдийн асаргаа, сувилалын чиглэлээр мэргэшсэн эмж, сувилагч нараас бүрдсэн бөгөөд найрсаг, мэргэжлийн үйлчилгээг үзүүлнэ.
+        </p>
         <!--First row-->
         <div class="row">
 
@@ -60,7 +65,7 @@
                     <!-- Nav tabs -->
                     <ul class="nav md-pills pills-secondary flex-center" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#panel31" role="tab"><i class="fa fa-diamond fa-2x"></i><br> Усан фитнес</a>
+                            <a class="nav-link active" data-toggle="tab" href="#panel31" role="tab"><img class="tab-icon" src="~/img/bath.png" /><br> Усан фитнес</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#panel32" role="tab"><i class="fa fa-sun-o fa-2x"></i><br> Алжаал тайлах</a>
@@ -69,7 +74,7 @@
                             <a class="nav-link" data-toggle="tab" href="#panel33" role="tab"><i class="fa fa-star fa-2x"></i><br> Чийрэгжүүлэх</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#panel34" role="tab"><i class="fa fa-coffee fa-2x"></i><br> Бусад</a>
+                            <a class="nav-link" data-toggle="tab" href="#panel34" role="tab"><i class="fa fa-coffee fa-2x"></i><br>  Бусад   </a>
                         </li>
                     </ul>
 
@@ -197,11 +202,11 @@
         </div>
         <!--/First row-->
     </section>
-    <!--/Projects section v.3-->
+
 </div>
 <!--/First container-->
 <!--Streak-->
-<div class="streak streak-photo streak-md hm-purple-slight-2" style="background-image: url(&#39;https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20%281%29.jpg&#39;);">
+<div class="streak streak-photo streak-md hm-purple-slight-2" style="background-image: url('/img/IMG_0411.JPG');">
     <div class="flex-center mask pattern-1">
         <div class="text-center white-text">
             <h2 class="h2-responsive my-5 pt-5"><i class="fa fa-quote-left" aria-hidden="true"></i> Find a way to get a full-body massage every day. <i class="fa fa-quote-right" aria-hidden="true"></i></h2>
@@ -211,44 +216,6 @@
 </div>
 <!--/Streak-->
 <!--Second container-->
-<div class="container">
-
-    <!--Section: Features v.1-->
-    <section id="attractions" class="section feature-box mt-4 mb-4">
-        <!--Section heading-->
-        <h1 class="section-heading my-5 pt-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">Яагаад биднийг сонгох вэ?</h1>
-        <!--Section sescription-->
-        <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum quas, eos officia maiores ipsam ipsum dolores reiciendis ad voluptas, animi obcaecati adipisci sapiente mollitia? Autem delectus quod accusamus.
-        </p>
-        <!--First row-->
-        <div class="row features-big">
-            <!--First column-->
-            <div class="col-md-4 mb-5 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <i class="fa fa-music pink-text-2"></i>
-                <h4 class="feature-title grey-text-2">Бид анхдагч</h4>
-                <p class="grey-text-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
-            </div>
-            <!--/First column-->
-            <!--Second column-->
-            <div class="col-md-4 mb-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <i class="fa fa-users pink-text-2"></i>
-                <h4 class="feature-title grey-text-2">Мэргэжилийн баг</h4>
-                <p class="grey-text-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
-            </div>
-            <!--/Second column-->
-            <!--Third column-->
-            <div class="col-md-4 mb-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <i class="fa fa-users pink-text-2"></i>
-                <h4 class="feature-title grey-text-2">Чанартай үйлчилгээ</h4>
-                <p class="grey-text-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
-            </div>
-            <!--/Third column-->
-        </div>
-        <!--/First row-->
-    </section>
-    <!--/Section: Features v.1-->
-</div>
 
 <div class="container-fluid background-grey">
     <div class="container">
@@ -368,6 +335,7 @@
 
     </div>
 </div>
+
 <div class="container">
     <!--Section: Testimonials v.3-->
     <section id="testimonials" class="section team-section">
@@ -387,10 +355,10 @@
                     <!--Content-->
                     <h4>Ганболд Цэцээ</h4>
                     <p> </p><div class="grey-text-2">
-    <i class="fa fa-quote-left"></i>
-                    Үнэхээр үйлчилгээ сайтай, сайхан хамт олон байна, хүүхэдтэй харицаж байгаагаас эхлээл бүх зүйл нь таалагдсан. 2 охиноо сайхан амраагаад авсан шүү баярлалаа
-    <p></p>
-</div>
+                        <i class="fa fa-quote-left"></i>
+                        Үнэхээр үйлчилгээ сайтай, сайхан хамт олон байна, хүүхэдтэй харицаж байгаагаас эхлээл бүх зүйл нь таалагдсан. 2 охиноо сайхан амраагаад авсан шүү баярлалаа
+                        <p></p>
+                    </div>
                     <!--Review-->
                     <div class="pink-text-2">
                         <i class="fa fa-star"> </i>
@@ -412,9 +380,9 @@
                     <!--Content-->
                     <h4>Ганжаргал Пүрэв</h4>
                     <p></p><div class="grey-text-2">
-    <i class="fa fa-quote-left"></i>
-                    Сайхан үйлчилгээтэй гоё газар шүү, танайх хамт олонд ажлын амжилт хүсье!<p></p>
-</div>
+                        <i class="fa fa-quote-left"></i>
+                        Сайхан үйлчилгээтэй гоё газар шүү, танайх хамт олонд ажлын амжилт хүсье!<p></p>
+                    </div>
                     <!--Review-->
                     <div class="pink-text-2 mb-5">
                         <i class="fa fa-star"> </i>
@@ -436,9 +404,9 @@
                     <!--Content-->
                     <h4>Амьдрал үргэлж сайхнаараа</h4>
                     <p></p><div class="grey-text-2">
-    <i class="fa fa-quote-left"></i>
-                    Маш их баярлалаа. Найрсаг сайхан үйлчилгээтэй газар байна. Бүх ажилчид нь ажлын амжилт хүсье, мөн дахин ирж үйлчилүүлнээ.<p></p>
-</div>
+                        <i class="fa fa-quote-left"></i>
+                        Маш их баярлалаа. Найрсаг сайхан үйлчилгээтэй газар байна. Бүх ажилчид нь ажлын амжилт хүсье, мөн дахин ирж үйлчилүүлнээ.<p></p>
+                    </div>
                     <!--Review-->
                     <div class="pink-text-2">
                         <i class="fa fa-star"> </i>
@@ -453,6 +421,44 @@
         </div>
         <!--/First row-->
     </section>
+</div>
+<div class="container">
+
+    <!--Section: Features v.1-->
+    <section id="attractions" class="section feature-box mt-4 mb-4">
+        <!--Section heading-->
+        <h1 class="section-heading my-5 pt-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">Яагаад биднийг сонгох вэ?</h1>
+        <!--Section sescription-->
+        <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum quas, eos officia maiores ipsam ipsum dolores reiciendis ad voluptas, animi obcaecati adipisci sapiente mollitia? Autem delectus quod accusamus.
+        </p>
+        <!--First row-->
+        <div class="row features-big">
+            <!--First column-->
+            <div class="col-md-4 mb-5 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
+                <i class="fa fa-music pink-text-2"></i>
+                <h4 class="feature-title grey-text-2">Бид анхдагч</h4>
+                <p class="grey-text-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+            </div>
+            <!--/First column-->
+            <!--Second column-->
+            <div class="col-md-4 mb-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
+                <i class="fa fa-users pink-text-2"></i>
+                <h4 class="feature-title grey-text-2">Мэргэжилийн баг</h4>
+                <p class="grey-text-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+            </div>
+            <!--/Second column-->
+            <!--Third column-->
+            <div class="col-md-4 mb-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
+                <i class="fa fa-users pink-text-2"></i>
+                <h4 class="feature-title grey-text-2">Чанартай үйлчилгээ</h4>
+                <p class="grey-text-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+            </div>
+            <!--/Third column-->
+        </div>
+        <!--/First row-->
+    </section>
+    <!--/Section: Features v.1-->
 </div>
 
 <div class="container-fluid background-grey">
