--- a/BabySpa/Views/Home/About.cshtml
+++ b/BabySpa/Views/Home/About.cshtml
@@ -1,23 +1,23 @@
 ﻿@{
     ViewBag.Title = "About our Spa";
 }
-<div class="container-fluid pt-4" style="background-image: url('img/bg-pattern-4.JPG');background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: cover;">
+<div class="container-fluid pt-1" >
 
     <!--Section: About-->
     <section id="about" class="section about ml-lg-5 mr-lg-5 pl-lg-5 pr-lg-5">
 
         <!--Secion heading-->
-        <h1 class="section-heading my-0 py-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Бидний тухай</h1>
+        <h1 class="section-heading my-5 py-5 wow fadeIn text-hide" data-wow-delay="0.2s" 
+            style="background-image: url('/img/Header_AboutUs.png');">Бидний тухай</h1>
 
         <!--First row-->
         <div class="row">
             <!--First column-->
-            <div class="col-lg-5 col-md-12 mb-5 mt-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
+            <div class="view overlay col-lg-5 col-md-12 mb-5 mt-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
 
                 <!--Image-->
-                <img src="~/img/about.jpg" class="img-fluid z-depth-3" alt="My photo">
+                <img src="~/img/about.jpg" class="img-fluid z-depth-3 " alt="My photo">
+                <div class="mask waves-effect waves-light"></div>
             </div>
             <!--/First column-->
             <!--Second column-->
