--- a/BabySpa/Views/Home/_Order.cshtml
+++ b/BabySpa/Views/Home/_Order.cshtml
@@ -1,11 +1,17 @@
 ﻿@model BabySpa.OrderViewModel
+@{
+    ViewBag.Title = "Захиалга өгөх?";
+}
 
-
-@using (Html.BeginForm("Home","Order"))
+@using (Ajax.BeginForm("Order", "Home", null, new AjaxOptions { UpdateTargetId = "order_form", HttpMethod = "Post" }, new { id = "orderForm" }))
 {
+    if (ViewBag.timesList == null)
+    {
+        ViewBag.timesList = new List<SelectListItem>();
+    }
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="form-horizontal order-form" id="order_form">
         <div class="modal-header text-center">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">×</span>
@@ -14,44 +20,56 @@
         </div>
         <!--Body-->
         <div class="modal-body">
+
+            @*<div class="md-form">
+                    @Html.TextBoxFor(m => m.Order.cust.email, new { @class = "form-control", @placeholder = "", maxlength = 150 })
+                    @Html.LabelFor(m => m.Order.cust.email, "Имэйл хаяг")
+
+                </div>*@
+            <div class="md-form">
+                @Html.TextBoxFor(m => m.Order.order_date, new { @class = "datepicker form-control", @placeholder = "" })
+                @Html.LabelFor(m => m.Order.order_date, "Өдөрөө сонгоно уу", new { @class = "active" })
+                @Html.ValidationMessageFor(model => model.Order.order_date, "", new { @class = "text-danger" })
+            </div>
+            <div class="md-form">
+                @Html.LabelFor(m => m.Order.branch_id, "Салбар", new { @class = "active" })
+                @Html.DropDownListFor(
+                                        m => m.Order.branch_id,
+                                        BabySpa.App.getBranchList(), new { @class = "mdb-select colorful-select dropdown-primary" }
+                                        )
+            </div>
+            <div class="md-form">
+                @Html.LabelFor(m => m.List[0].order_time, "Цагийн хуваарь", new { @class = "active" })
+                @Html.DropDownListFor(
+                                 m => m.List[0].order_time,
+                                 (IEnumerable<SelectListItem>)ViewBag.timesList, new { @class = "mdb-select colorful-select dropdown-primary" }
+                                 )
+                @Html.ValidationMessageFor(model => model.List[0].order_time, "", new { @class = "text-danger" })
+            </div>
+            <div class="md-form">
+                @Html.LabelFor(m => m.List[0].prod_id, "Багц", new { @class = "active" })
+                @Html.DropDownListFor(
+                                        m => m.List[0].prod_id,
+                                        BabySpa.App.getServiceList(), new { @class = "mdb-select colorful-select dropdown-primary" }
+                                        )
+            </div>
             <div class="md-form">
                 @Html.TextBoxFor(m => m.Order.cust.father_name, new { @class = "form-control validate", @placeholder = "", maxlength = 50 })
+                @Html.ValidationMessageFor(model => model.Order.cust.father_name, "", new { @class = "text-danger" })
                 @Html.LabelFor(m => m.Order.cust.father_name, "Таны овог нэр", new { @class = "active" })
             </div>
             <div class="md-form">
                 @Html.TextBoxFor(m => m.Order.cust.contact_phone, new { @class = "form-control validate", @placeholder = "", maxlength = 150 })
                 @Html.LabelFor(m => m.Order.cust.contact_phone, "Утасны дугаар", new { @class = "active" })
-            </div>
-            @*<div class="md-form">
-                @Html.TextBoxFor(m => m.Order.cust.email, new { @class = "form-control", @placeholder = "", maxlength = 150 })
-                @Html.LabelFor(m => m.Order.cust.email, "Имэйл хаяг")
-
-            </div>*@
-            <div class="md-form">
-                @Html.TextBoxFor(m => m.Order.order_date, new { @class = "datepicker form-control", @placeholder = "" })
-                @Html.LabelFor(m => m.Order.order_date, "Өдөрөө сонгоно уу", new { @class = "active" })
-            </div>
-            <div class="md-form">
-                @Html.LabelFor(m => m.Order.branch_id, "Салбар", new { @class = "active" })
-                @Html.DropDownListFor(
-                             m => m.Order.branch_id,
-                             BabySpa.App.getBranchList(), new { @class = "mdb-select" }
-                             )
-            </div>
-            <div class="md-form">
-                @Html.LabelFor(m => m.List[0].prod_id, "Багц", new { @class = "active" })
-                @Html.DropDownListFor(
-                             m => m.List[0].prod_id,
-                             BabySpa.App.getServiceList(), new { @class = "mdb-select" }
-                             )
+                @Html.ValidationMessageFor(model => model.Order.cust.contact_phone, "", new { @class = "text-danger" })
             </div>
             <!--Basic textarea-->
             <div class="md-form">
-                @Html.TextAreaFor(m => m.Order.cust_note, new { @class = "md-textarea", @placeholder = "", rows = 3, maxlength = "500" })
+                @Html.TextAreaFor(m => m.Order.cust_note, new { @class = "md-textarea", @placeholder = "", rows = 2, maxlength = "500" })
                 <label for="Order.cust_note" class="active">Хэрэглэгчийн тэмдэглэл</label>
             </div>
             <div class="text-center">
-                <button class="btn btn-lg btn-purple-2 btn-primary waves-effect">Илгээх</button>
+                <button class="btn btn-lg btn-purple-2 btn-primary waves-effect" id="btnOrder">Илгээх</button>
                 <p class="text-muted">Захиалгыг хүлээж аваад бид эргэж холбогдон баталгаажуулах болно.</p>
 
                 <div class="call">
@@ -60,13 +78,14 @@
             </div>
         </div>
         <!--Footer-->
-        <div class="modal-footer">
-            <button type="button" class="btn btn-info waves-effect waves-light" data-dismiss="modal">Хаах</button>
-        </div>
+        @*<div class="modal-footer">
+                <button type="button" class="btn btn-info waves-effect waves-light" data-dismiss="modal">Хаах</button>
+            </div>*@
     </div>
 }
 
 @section scripts {
-   
+    <script type="text/javascript">
 
+    </script>
 }
