--- a/BabySpa/Views/Home/Index.cshtml
+++ b/BabySpa/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Тавтай морилно уу?";
 }
 
 @{ string type = "";
@@ -7,12 +7,15 @@
 }
 
 
-<div class="container-fluid " style="background-image: url('img/bg-pattern-1.JPG')">
+<div class="container-fluid " style="">
     <section id="services" class="section pt-4">
         <!--Section heading-->
-        <h1 class="section-heading mt-0 pt-4 mb-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Бидний үйлчилгээ</h1>
+        <h1 class="section-heading mt-4 pt-4 mb-3 wow fadeIn text-hide" data-wow-delay="0.2s"
+            style="background-image: url('/img/Header_Service.png');">
+            Бидний үйлчилгээ
+        </h1>
         <!--Section description-->
-        <p class="section-description wow fadeIn mb-4" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
+        <p class="section-description wow fadeIn mb-4" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
             Нярай болон бага насны хүүхдийн дархлаа дэмжих, алжаал тайлах, чийрэгжүүлэх цогц үйлчилгээг энхрий бяцхан дүү нартаа санал болгож байна.
             Манай хамт олон хүүхдийн асаргаа, сувилалын чиглэлээр мэргэшсэн эмж, сувилагч нараас бүрдсэн бөгөөд найрсаг, мэргэжлийн үйлчилгээг үзүүлнэ.
         </p>
@@ -23,11 +26,14 @@
             <div class="col-md-12 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
 
                 <div class="mb-2">
-
                     <!-- Nav tabs -->
                     <ul class="nav md-pills pills-secondary flex-center" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#panel31" role="tab"><img class="tab-icon" src="~/img/bath.png" /><br> Усан фитнес</a>
+                            <a class="nav-link active" data-toggle="tab" href="#panel31" role="tab">
+                                @*<img class="tab-icon" src="~/img/bath.png" />*@
+                                <i class="fa fa-bath fa-2x"></i>
+                                <br> Усан фитнес
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#panel32" role="tab"><i class="fa fa-sun-o fa-2x"></i><br> Алжаал тайлах</a>
@@ -52,8 +58,9 @@
                             <!--First column-->
                             <div class="col-lg-5 col-md-12 mb-5">
                                 <!--Featured image-->
-                                <div class="view overlay hm-white-slight z-depth-1 z-depth-2">
+                                <div class="view overlay hm-white-slight z-depth-2 zoom">
                                     <img src="~/img/service_fitness.jpg">
+                                    <div class="mask waves-effect waves-light"></div>
                                 </div>
                             </div>
                             <!--/First column-->
@@ -80,8 +87,9 @@
                             <!--First column-->
                             <div class="col-lg-5 col-md-12 mb-5">
                                 <!--Featured image-->
-                                <div class="view overlay hm-white-slight z-depth-1 z-depth-2">
-                                    <img src="~/img/service_massagge.jpg">
+                                <div class="view overlay hm-white-slight z-depth-2 zoom">
+                                    <img src="~/img/service_massagge.jpg" class="img-fluid">
+                                    <div class="mask waves-effect waves-light"></div>
                                 </div>
                             </div>
                             <!--/First column-->
@@ -108,8 +116,9 @@
                             <!--First column-->
                             <div class="col-lg-5 col-md-12 mb-5">
                                 <!--Featured image-->
-                                <div class="view overlay hm-white-slight z-depth-1 z-depth-2">
+                                <div class="view overlay hm-white-slight zoom z-depth-2">
                                     <img src="~/img/service_heilthy.jpg">
+                                    <div class="mask waves-effect waves-light"></div>
                                 </div>
                             </div>
                             <!--/First column-->
@@ -136,8 +145,9 @@
                             <!--First column-->
                             <div class="col-lg-5 col-md-12 mb-5">
                                 <!--Featured image-->
-                                <div class="view overlay hm-white-slight z-depth-1 z-depth-2">
+                                <div class="view overlay hm-white-slight zoom z-depth-2">
                                     <img src="~/img/service_other.jpg">
+                                    <div class="mask waves-effect waves-light"></div>
                                 </div>
                             </div>
                             <!--/First column-->
@@ -179,18 +189,19 @@
 <!--/Streak-->
 <!--Second container-->
 
-<div class="container-fluid background-grey">
+<div class="container-fluid">
     <div class="container">
         <!--Section: Pricing v.5-->
-        <section id="pricing" class="section pb-5">
+        <section id="pricing" class="section">
             <!--Secion heading-->
-            <h1 class="section-heading mt-0 mb-5 pt-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">Бидний санал болгох багцууд</h1>
+            <h1 class="section-heading mt-5 mb-5 pt-4 wow fadeIn text-hide"  data-wow-delay="0.2s"
+                style="background-image: url('/img/Header_Product.png');">Бидний санал болгох багцууд</h1>
             <!--Grid row-->
-            <div class="row">
+            <div class="row wow fadeIn" data-wow-delay="0.3s">
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-r">
                     <!--Card-->
-                    <div class="card card-image" style="background-image: url('/img/bg-card-1.jpg');">
+                    <div class="card card-image hoverable" style="background-image: url('/img/bg-card-1.jpg');">
                         <div class="text-white text-center pricing-card d-flex align-items-center  py-3 px-3">
                             <!--Content-->
                             <div class="card-body">
@@ -224,7 +235,7 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-r">
                     <!-- Card -->
-                    <div class="card card-image" style="background-image: url('/img/bg-card-2.jpg');">
+                    <div class="card card-image hoverable" style="background-image: url('/img/bg-card-2.jpg');">
                         <!-- Content -->
                         <div class="text-white text-center pricing-card d-flex align-items-center  py-3 px-3">
                             <!--Content-->
@@ -259,7 +270,7 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-r">
                     <!--Card-->
-                    <div class="card card-image" style="background-image: url('/img/bg-card-3.jpg');">
+                    <div class="card card-image hoverable" style="background-image: url('/img/bg-card-3.jpg');">
                         <!--Content-->
                         <div class="text-white text-center pricing-card d-flex align-items-center  py-3 px-3">
                             <div class="card-body">
@@ -298,15 +309,16 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container white rounded z-depth-2">
     <!--Section: Testimonials v.3-->
-    <section id="testimonials" class="section team-section">
+    <section id="testimonials" class="section team-section pt-3">
         <!--Section heading-->
-        <h1 class="section-heading mt-5 pt-5">Манай үйлчлүүлэгч бидний тухай:</h1>
+        <h1 class="section-heading pt-5 mb-3  wow fadeIn text-hide" data-wow-delay="0.2s"
+             style="background-image: url('/img/Header_Testimonials.png');">Манай үйлчлүүлэгч бидний тухай:</h1>
         <!--Section description-->
-        <p class="section-description">Манай үйлчилүүлэгчидийн санал хүсэлт, урамын үг бүгд бидний цаашдын үйл ажиллагаанд улам бүр дэм болдог юм.</p>
+        <p class="section-description wow fadeIn" data-wow-delay="0.3s" >Манай үйлчилүүлэгчидийн санал хүсэлт, урамын үг бүгд бидний цаашдын үйл ажиллагаанд улам бүр дэм болдог юм.</p>
         <!--First row-->
-        <div class="row text-center">
+        <div class="row text-center wow fadeIn" data-wow-delay="0.4s" >
             <!--First column-->
             <div class="col-md-4 mb-r">
                 <div class="testimonial">
@@ -384,21 +396,25 @@
         <!--/First row-->
     </section>
 </div>
-<div class="container">
+<div class="container-fluid">
+    @Html.Partial("Branches")
+</div>
+<div class="container white z-depth-2 rounded">
 
     <!--Section: Features v.1-->
-    <section id="attractions" class="section feature-box mt-4 mb-4">
+    <section id="attractions" class="section feature-box mt-4 mb-4 pt-3">
         <!--Section heading-->
-        <h1 class="section-heading my-5 pt-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">Яагаад биднийг сонгох вэ?</h1>
+        <h1 class="section-heading my-4 pt-4 wow fadeIn text-hide" data-wow-delay="0.2s" 
+            style="background-image: url('/img/Header_WhyChooseUs.png');">Яагаад биднийг сонгох вэ?</h1>
         <!--Section sescription-->
         <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum quas, eos officia maiores ipsam ipsum dolores reiciendis ad voluptas, animi obcaecati adipisci sapiente mollitia? Autem delectus quod accusamus.
         </p>
         <!--First row-->
-        <div class="row features-big">
+        <div class="row features-big wow fadeIn" data-wow-delay="0.3s" >
             <!--First column-->
             <div class="col-md-4 mb-5 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <i class="fa fa-music pink-text-2"></i>
+                <i class="fa fa-child pink-text-2"></i>
                 <h4 class="feature-title grey-text-2">Бид анхдагч</h4>
                 <p class="grey-text-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
             </div>
@@ -412,7 +428,7 @@
             <!--/Second column-->
             <!--Third column-->
             <div class="col-md-4 mb-1 wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <i class="fa fa-users pink-text-2"></i>
+                <i class="fa fa-certificate pink-text-2"></i>
                 <h4 class="feature-title grey-text-2">Чанартай үйлчилгээ</h4>
                 <p class="grey-text-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
             </div>
@@ -423,28 +439,7 @@
     <!--/Section: Features v.1-->
 </div>
 
-<div class="container-fluid background-grey">
-
-    <!--First row-->
-    <div class="row pb-4 pt-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-        <!--First column-->
-        <div class="col-md-12  text-center">
-
-
-            <!--Title-->
-            <h2 class="mb-4 mt-5">Visit Our Spa</h2>
-
-            <!--Reservation button-->
-            <a href="@path#!" class="mb-5 btn btn-lg btn-info waves-effect waves-light" data-toggle="modal" data-target="#modal-reservation">Reservation popup</a>
-            <a href="@path#!" class="mb-5 btn btn-lg btn-primary  waves-effect waves-light" data-toggle="modal" data-target="#modal-contact">Contact form</a>
-
-        </div>
-        <!--/First column-->
-    </div>
-    <!--/First row-->
-</div>
-
-<div class="container">
+@*<div class="container">
     <!--Section: Newsletter-->
     <section id="newsletter" class="section mt-5 mb-5 pb-5 wow fadeIn newsletter" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
 
@@ -500,4 +495,4 @@
     </section>
     <!--/Section: Newsletter-->
 
-</div>
+</div>*@
